sfSandBoxCode/force-app/main/default/objects/Toilet__c/Toilet__c.object-meta.xml
<CustomObject>
    <label>Toilet</label>
    <nameField>
        <label>Toilet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toilets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>