sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/accuracy__c.field-meta.xml
<CustomField>
    <fullName>accuracy__c</fullName>
    <label>Geo Accuracy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>