sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>TEXT(  Location__r.Sub_Area__r.Area__c  )</formula>
    <label>Area</label>
    <type>Text</type>
</CustomField>