sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Average_Users_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day__c</fullName>
    <formula>Avg_Waste_Day__c / Location__r.Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Users/Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>