sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Average_Users_Day_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Day_OPEN__c</fullName>
    <description>Average Users/ Day on days the toilet is open.</description>
    <formula>Avg_Waste_Day_OPEN__c  / Location__r.Waste_User_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Users/ Day - OPEN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>