sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Average_Waste_Day_THIS_QUARTER__c.field-meta.xml
<CustomField>
    <fullName>Average_Waste_Day_THIS_QUARTER__c</fullName>
    <formula>SUM_of_Waste_This_Quarter__c /  Count_of_Waste_Data_This_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Waste/ Day- THIS QUARTER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>