sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Avg_Waste_Day__c.field-meta.xml
<CustomField>
    <fullName>Avg_Waste_Day__c</fullName>
    <formula>Summary_Waste_Day__c / Waste_Data_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Waste/Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>