sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Avg_Waste_Day_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Avg_Waste_Day_OPEN__c</fullName>
    <description>Average waste on days the toilet was open.</description>
    <formula>Sum_of_Waste_Day_OPEN__c /  Waste_Data_Records_OPEN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Waste/ Day - OPEN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>