sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Campaign_s__c.field-meta.xml
<CustomField>
    <fullName>Campaign_s__c</fullName>
    <inlineHelpText>This field pulls the campaigns influencing the last waste data record at this toilet.</inlineHelpText>
    <label>Campaign(s) Influencing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>