sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/City_del__c.field-meta.xml
<CustomField>
    <fullName>City_del__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>