sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Collection_Route__c.field-meta.xml
<CustomField>
    <fullName>Collection_Route__c</fullName>
    <label>Collection Route</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>Ruben Collection Spot</fullName>
            </value>
            <value>
                <fullName>KR Collection Center</fullName>
            </value>
            <value>
                <fullName>Paradise Collection Center</fullName>
            </value>
            <value>
                <fullName>Simba Cool</fullName>
            </value>
            <value>
                <fullName>KN Collection Center</fullName>
            </value>
            <value>
                <fullName>Truck Round 1</fullName>
            </value>
            <value>
                <fullName>Kingstone</fullName>
            </value>
            <value>
                <fullName>Tuk Tuk</fullName>
            </value>
            <value>
                <fullName>Kayaba Collection Center</fullName>
            </value>
            <value>
                <fullName>Limuru - Mabroukie</fullName>
            </value>
            <value>
                <fullName>Kiambiu Collection Center</fullName>
            </value>
            <value>
                <fullName>Mathare Collection Center</fullName>
            </value>
            <value>
                <fullName>Tassia collection center</fullName>
            </value>
            <value>
                <fullName>Kariobangi south collection spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>