sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Competitor_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Toilet__c</fullName>
    <formula>IF(Provider__r.Competitor__c=TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Toilet?</label>
    <type>Text</type>
</CustomField>