sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Count_of_Waste_Data_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Waste_Data_This_Quarter__c</fullName>
    <description>Counts the number of non-zero waste data records this quarter</description>
    <label>Count of Waste Data - This Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>