sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Count_Waste_Day_del__c.field-meta.xml
<CustomField>
    <fullName>Count_Waste_Day_del__c</fullName>
    <label>Count Waste/Day</label>
    <summaryForeignKey>Collection_Data__c.Toilet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>