sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Current_Operational_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Operational_Status_Count__c</fullName>
    <description>Number of Operational  Status records flagged as current</description>
    <label>Current Operational Status Count</label>
    <summaryFilterItems>
        <field>Toilet_Operational_Status__c.Current_Record__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Toilet_Operational_Status__c.Toilet_Status__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>