sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Current_Specific_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Specific_Status__c</fullName>
    <description>Current Specific Status of the Toilet</description>
    <inlineHelpText>Current Specific Status of the Toilet</inlineHelpText>
    <label>Current Specific Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Operational_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Closed - By FLI</fullName>
            </value>
            <value>
                <fullName>Closed - By FLO</fullName>
            </value>
            <value>
                <fullName>Closed - Debranded</fullName>
            </value>
            <value>
                <fullName>Closed - Demolished</fullName>
            </value>
            <value>
                <fullName>Closed - QA Check</fullName>
            </value>
            <value>
                <fullName>Closed - Relocated</fullName>
            </value>
            <value>
                <fullName>Closed - Repossessed</fullName>
            </value>
            <value>
                <fullName>Closed - Resold</fullName>
            </value>
            <value>
                <fullName>Open - Company-Owned</fullName>
            </value>
            <value>
                <fullName>Open - New</fullName>
            </value>
            <value>
                <fullName>Open - Re-installed</fullName>
            </value>
            <value>
                <fullName>Open - Re-opened</fullName>
            </value>
            <value>
                <fullName>Open - Relocated</fullName>
            </value>
            <value>
                <fullName>Open - Resold</fullName>
            </value>
            <value>
                <fullName>Open - Rebranded</fullName>
            </value>
            <value>
                <fullName>Open - Reopened</fullName>
            </value>
            <value>
                <fullName>Pending Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>