sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Current_Status_Change_date__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Change_date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date when the current status changed</description>
    <label>Current Status Change date</label>
    <type>Date</type>
</CustomField>