sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Days_since_Toilet_Opened__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Toilet_Opened__c</fullName>
    <formula>TODAY() -  Min_Collection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Toilet Opened</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>