sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Explanation_2__c.field-meta.xml
<CustomField>
    <fullName>Explanation_2__c</fullName>
    <label>Explanation 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Along power line</fullName>
            </value>
            <value>
                <fullName>Along road reserve</fullName>
            </value>
            <value>
                <fullName>Along pipeline</fullName>
            </value>
            <value>
                <fullName>River reserve</fullName>
            </value>
            <value>
                <fullName>Road expansion</fullName>
            </value>
            <value>
                <fullName>With neighbors</fullName>
            </value>
            <value>
                <fullName>With landlords</fullName>
            </value>
            <value>
                <fullName>Community member(s)</fullName>
            </value>
            <value>
                <fullName>Local government</fullName>
            </value>
            <value>
                <fullName>Consumables are too expensive</fullName>
            </value>
            <value>
                <fullName>Complaint of strict hygiene</fullName>
            </value>
            <value>
                <fullName>FLO non-adherence</fullName>
            </value>
            <value>
                <fullName>Tenants refused to pay landlord</fullName>
            </value>
            <value>
                <fullName>Tenants vacated</fullName>
            </value>
            <value>
                <fullName>Too expensive - personal reason</fullName>
            </value>
            <value>
                <fullName>Cannibalization</fullName>
            </value>
            <value>
                <fullName>No operator</fullName>
            </value>
            <value>
                <fullName>Connected to sewer</fullName>
            </value>
            <value>
                <fullName>Pit latrines</fullName>
            </value>
            <value>
                <fullName>Public toilet</fullName>
            </value>
            <value>
                <fullName>Infrequent collection</fullName>
            </value>
            <value>
                <fullName>Personal interaction with FLI</fullName>
            </value>
            <value>
                <fullName>Government demolition</fullName>
            </value>
            <value>
                <fullName>FLO moved</fullName>
            </value>
            <value>
                <fullName>Change of ownership</fullName>
            </value>
            <value>
                <fullName>Residential upgrading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>