sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Sets an external ID for uploading through data-loaders. Copies toilet name.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>