sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Feces__c.field-meta.xml
<CustomField>
    <fullName>Feces__c</fullName>
    <label>Feces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>