sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/FLO_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>FLO_Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FLO Reimbursed for this FLT</description>
    <inlineHelpText>FLO Reimbursed for this FLT</inlineHelpText>
    <label>FLO Reimbursed</label>
    <type>Checkbox</type>
</CustomField>