sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Flooring_Type__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Type__c</fullName>
    <label>Flooring Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>