sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Geocode_Address__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Address__c</fullName>
    <label>Geocode Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>