sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Geocode_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Status__c</fullName>
    <label>Geocode Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>