sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <label>GPS Latitude</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>