sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/GPS_Longitute__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitute__c</fullName>
    <label>GPS Longitute</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>