sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Is_Opex_Fee_For_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Opex_Fee_For_Service__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Opex/Fee For Service</label>
    <type>Checkbox</type>
</CustomField>