sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Is_Pit_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Is_Pit_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pit Conversion</label>
    <type>Checkbox</type>
</CustomField>