sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Last_30_Days_Collection_Feces__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Days_Collection_Feces__c</fullName>
    <label>Last 30 Days Collection (Feces)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>