sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the toilet</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Toilets</relationshipLabel>
    <relationshipName>Toilets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>