sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Location_Record_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Location_Record_Type_del__c</fullName>
    <formula>Location__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Record Type</label>
    <type>Text</type>
</CustomField>