sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Map_field__c.field-meta.xml
<CustomField>
    <fullName>Map_field__c</fullName>
    <label>System: Map field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>