sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Min_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Collection_Date__c</fullName>
    <label>Min Collection Date</label>
    <summarizedField>Collection_Data__c.Collection_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Collection_Data__c.Total_Waste_kg_day__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Collection_Data__c.Toilet__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>