sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Number_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customers__c</fullName>
    <label>Number of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>