sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date__c</fullName>
    <description>Date of first day of business</description>
    <label>Opening Date</label>
    <type>Date</type>
</CustomField>