sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <description>Whether the toilet is currently open or closed.</description>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>