sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Toilets</relationshipLabel>
    <relationshipName>Toilets</relationshipName>
    <type>Lookup</type>
</CustomField>