sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Percent_of_days_open_1__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_days_open_1__c</fullName>
    <description>Percent of days since the toilet has been open</description>
    <label>Percent of days open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>