sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Previous_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Previous_Toilet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Toilets (Previous Toilet)</relationshipLabel>
    <relationshipName>Toilets1</relationshipName>
    <type>Lookup</type>
</CustomField>