sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>When new Toilet records are created via Opportunity Product Line Items, this field is automatically populated.</description>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sanitation Center</fullName>
            </value>
            <value>
                <fullName>Add-On Sanitation Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>