sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Reason_2__c</fullName>
    <label>Closure Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government Demolition</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Found another toilet option</fullName>
            </value>
            <value>
                <fullName>Service Related</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>