sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Squat_Plate_Type__c.field-meta.xml
<CustomField>
    <fullName>Squat_Plate_Type__c</fullName>
    <inlineHelpText>Please select the type of squat plate currently in use at this toilet</inlineHelpText>
    <label>Squat Plate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original Blue 60cm x 80cm</fullName>
            </value>
            <value>
                <fullName>Black 60cm x 80cm</fullName>
            </value>
            <value>
                <fullName>Ecoplate</fullName>
                <default>true</default>
                <label>Ecoplate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>