sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Squat_Support__c.field-meta.xml
<CustomField>
    <fullName>Squat_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Squat Support</label>
    <type>Checkbox</type>
</CustomField>