sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When new Toilet records are created via Opportunity Product Line Items, this field is automatically populated.</description>
    <label>Sub-Area (del)</label>
    <referenceTo>Sub_Area__c</referenceTo>
    <relationshipLabel>Toilets</relationshipLabel>
    <relationshipName>Toilets</relationshipName>
    <type>Lookup</type>
</CustomField>