sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/SubArea__c.field-meta.xml
<CustomField>
    <fullName>SubArea__c</fullName>
    <formula>Location__r.Sub_Area__r.Name</formula>
    <label>Sub-Area</label>
    <type>Text</type>
</CustomField>